# llama-cpp-bindings

./: AGENTS.md  Cargo.toml
.claude/skills/testing-inference/: SKILL.md
.github/workflows/: ci.yml
examples/: llguidance.rs  openai_stream.rs  tools.rs  usage.rs
examples/embeddings/: Cargo.toml
examples/mtmd/: Cargo.toml
examples/reranker/: Cargo.toml
examples/reranker/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: context.rs  lib.rs  llama_backend.rs  llama_batch.rs  llguidance_sampler.rs  log.rs  model.rs  mtmd.rs  openai.rs  sampling.rs  timing.rs  token.rs  token_type.rs
llama-cpp-2/src/context/: kv_cache.rs  params.rs  session.rs
llama-cpp-2/src/model/: params.rs
llama-cpp-2/src/token/: data.rs  (+2 more)
llama-cpp-2/tests/: constrained_decoding.rs  multimodal.rs
llama-cpp-bindings/: Cargo.toml
llama-cpp-bindings-build/: Cargo.toml
llama-cpp-bindings-sys/: Cargo.toml
llama-cpp-bindings/src/: error.rs  lib.rs  llama_backend.rs  llama_backend_device.rs  llama_backend_numa_strategy.rs  llama_batch.rs  llama_utility.rs  llama_utility_ggml_time_us.rs  llama_utility_llama_time_us.rs  llama_utility_max_devices.rs  llama_utility_status_to_i32.rs  llguidance_sampler.rs  log.rs  log_options.rs  model.rs  openai.rs  sampling.rs  timing.rs  token.rs  token_type.rs
llama-cpp-bindings/tests/: constrained_decoding.rs  embeddings.rs  inference.rs  multimodal.rs  openai_server.rs  openai_streaming.rs  reranker.rs  text_generation.rs  tool_calling.rs
llama-cpp-build/: Cargo.toml
llama-cpp-sys-2/: Cargo.toml  build.rs
llama-cpp-sys-2/src/: lib.rs
(+16 files in other folders)
