[workspace]
resolver = "2"
members = [
  "llama-cpp-build",
  "llama-cpp-sys-2",
  "llama-cpp-2",
  "examples/simple",
  "examples/embeddings",
  "examples/server",
  "examples/reranker",
  "examples/mtmd",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# core
encoding_rs = "0.8.35"
enumflags2 = "0.7.12"
llama-cpp-2 = { path = "llama-cpp-2", version = "0.1.138" }
llama-cpp-sys-2 = { path = "llama-cpp-sys-2", version = "0.1.138" }
thiserror = "2"
tracing = "0.1"
tracing-core = "0.1"

# build
bindgen = "0.72.1"
cc = "1.2.56"
cmake = "0.1"
find_cuda_helper = "0.2.0"
glob = "0.3.3"
llama-cpp-build = { path = "llama-cpp-build", version = "0.1.138" }
walkdir = "2"

# dev and examples
actix-web = "4.13.0"
anyhow = "1.0.102"
clap = "4.5.60"
criterion = "0.5.1"
hf-hub = "0.4.3"
pprof = "0.13.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["json"] }

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# FFI casts are unavoidable when bridging C and Rust types
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Doc sections for every fallible/panicking function add noise without value
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Pedantic lints that conflict with FFI wrapper patterns
doc_markdown = "allow"
missing_fields_in_debug = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
upper_case_acronyms = "allow"
